# noti

./: .dockerignore  .env.example  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docker.yml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
core/: __init__.py  settings.py  urls.py
core/core/: celery.py  settings.py
core/notifications/: admin.py  models.py  tasks.py  urls.py  views.py
notifications/: admin.py  manage.py  models.py  serializers.py  tasks.py  tests.py  views.py
notifications/migrations/: 0001_initial.py
notifications/notifications/: asgi.py  settings.py  urls.py  wsgi.py
notifications/services/: __init__.py  apns.py  notification_service.py
